--- a/src/part1_kertausta/Kertaus2/Kertaus2_logging.csproj
+++ b/src/part1_kertausta/Kertaus2/Kertaus2_logging.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <None Include="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
