--- a/src/part1_kertausta/Kertaus2/appsettings.json
+++ b/src/part1_kertausta/Kertaus2/appsettings.json
@@ -3,16 +3,13 @@
         "Using":  [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
         "MinimumLevel": "Debug",
         "WriteTo": [
-          { "Name": "Console" },
+          { "Name": "Console",
+            "Args": {
+                "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+                "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+              } 
+          },
           { "Name": "File", "Args": { "path": "Logs/log.txt" } }
-        ],
-        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
-        "Destructure": [
-          { "Name": "ToMaximumDepth", "Args": { "maximumDestructuringDepth": 4 } },
-          { "Name": "ToMaximumStringLength", "Args": { "maximumStringLength": 100 } },
-          { "Name": "ToMaximumCollectionCount", "Args": { "maximumCollectionCount": 10 } }
-        ],
-        "Properties": {
-        }
+        ]
       }
   }
