--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+#ignore secrets
+.env
+secrets.json
+access_token.txt
+id_token.txt
+
 # Mono auto generated files
 mono_crash.*
 
