--- a/src/todo/appsettings.json
+++ b/src/todo/appsettings.json
@@ -29,8 +29,18 @@
       },
       {
         "Name": "Seq",
-        "Args": {"serverUrl": "http://localhost:5341" }
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
       }
     ]
+  },
+  "AzureAd": {
+    "TenantId": "",
+    "ClientId": "",
+    "ClientSecret": ""
+  },
+  "ConnectionStrings": {
+    "SqlServer": "Server=sqlpenpa.database.windows.net;Database=TodoApiDatabase;Encrypt=True;"
   }
 }
